@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0


class Company {
  -designation
}

class Employee {
  -employeeId
  -name
  -address
  -phoneNumber
  -email
  -socCode
}



class User{
  -name
  -email
  -password
}

class Test{
-LabOrder
-sample
}

class Sample{

-barcode
}

class TestType{
-designation
-description
-internalCode
-nhsCode
}
class LabOrder{
-testType
-Parameters
}
class Barcode{
-upcCode
}

Company "1" -- "*" Test: does>
Test "1" -- "1" Sample : has>
Test "*" -- "1" Employee : is performed by>
Test "1" -- "1" TestType : is of>
Employee "0..1" -- "1" User: relates to >
Sample "*" -- "1..*" Employee : is recorded by>
LabOrder "1" -- "1" Test : gives rise>

Sample "1" -- "1" Barcode : has>

Barcode "1..*" -- "1" ExternalModule : Obtained from>

LabOrder "1" -- "1" TestType : has>
@enduml